src/test/deca/syntax/valid/HelloWorld/Inst4-EmptyListExpr.deca
// Description:
//    Test on inst -> 'println' '(' list_expr ')' without list_expr.
//
// Expected Results:
//    Nothing
//
// History:
//    created on 05/01/2022

{
    println();
}
