src/test/deca/syntax/invalid/HelloWorld/Inst4-NoOP.deca
// Description:
//    println without closing parenthesis.
//
// Results:
//    Line 12 : syntax error.
//    test_lex: no error .
//
// History:
//    cree le 05/01/2022

{
println"Hello");
}
